Added SQL and activity fields modified

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=backend
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/ruralfit
+spring.datasource.username=postgres
+spring.datasource.password=greenfield
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate settings
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
