--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=backend
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/ruralfit
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=greenfield
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate settings
